<?xml version="1.0"?>
<package format="2">
  <name>covered_area</name>
  <version>0.0.0</version>
  <description>The covered_area package allows compute 
    the area covered for the footprint of a robot.</description>
  <maintainer email="alejandro.acevedo@gmail.com">Alejandro Acevedo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
